--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "brain-games": "bin/brain-games.js"
   },
   "homepage": "https://github.com/DangerDanJS/frontend-project-44#readme",
-  "dependencies": {
+  "devDependencies": {
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "readline-sync": "^1.4.10"
   }
 }
